# ShitalEco

./: .env.example  .eslintrc.json  .gitignore  .npmrc  CLAUDE.md  DEPLOY.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.json  turbo.json  update.sh
.github/workflows/: build-kiosk.yml  ci.yml  db-recover.yml  deploy-dev.yml  deploy-vultr.yml  open-ports.yml  rollback.yml  service-portal.yml
apps/admin/: .ci-trigger  Dockerfile  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/admin/src/: middleware.ts
apps/admin/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/admin/src/components/: AuthGuard.tsx
apps/admin/src/lib/: api.ts  branding.tsx  msal.ts
apps/kiosk/: .env.example  Dockerfile  capacitor.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/kiosk/api/: address-lookup.ts
apps/kiosk/src/main/: main.js  preload.js
apps/kiosk/src/renderer/: KioskApp.tsx  index.css  main.tsx
apps/quick-donation/: .env.example  Dockerfile  index.html  package-lock.json  package.json  server.js  tailwind.config.js  vercel.json  vite.config.ts
apps/quick-donation/src/: QuickDonationApp.tsx  index.css  main.tsx
apps/screen/: Dockerfile  index.html  package.json  vite.config.ts
apps/screen/html/: index.html
apps/screen/src/: App.tsx
apps/service/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
apps/service/src/: App.tsx  api.ts  index.css  store.ts  themes.ts
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  setup_quickdonation.py
backend/alembic/: env.py
backend/alembic/versions/: 002_catalog_items.py  003_gift_aid_declarations.py  004_terminal_devices.py  005_azure_ad.py  006_kiosk_baskets.py  006_payment_providers.py  007_item_scheduling.py  008_email_templates.py  009_name_te.py  010_kiosk_profiles.py  011_function_registry.py  012_assets_bookings_documents.py  013_hr_tables.py  014_catalog_items_project_id.py  015_payment_providers.py  016_recurring_giving.py  017_rich_receipt_template.py  018_orders_donations_schema.py  019_donations_fee_columns.py  020_kiosk_profiles_sumup.py  021_gasds.py  022_gasds_building.py  023_gift_aid_donor_fields.py  024_address_house_number.py  026_crm_accounts.py
backend/src/shital/: main.py
backend/src/shital/api/: deps.py
backend/src/shital/api/routers/: accounts.py  admin_kiosk.py  api_keys.py  app_permissions.py  assets.py  auth.py  auth_azure.py  bookings_router.py  brain.py  branches.py  contacts.py  documents_router.py  email_templates.py  finance.py  functions.py  giftaid.py  hr.py  items.py  kiosk.py  kiosk_devices.py  paypal.py  payroll.py  projects.py  recurring_giving.py  recurring_payments.py  screen.py  system.py  terminal_devices.py  users.py
backend/src/shital/capabilities/: __init__.py
backend/src/shital/capabilities/assets/: capabilities.py
backend/src/shital/capabilities/auth/: __init__.py  capabilities.py
backend/src/shital/capabilities/compliance/: capabilities.py
backend/src/shital/capabilities/finance/: capabilities.py
backend/src/shital/capabilities/giftaid/: capabilities.py
backend/src/shital/capabilities/hr/: capabilities.py
backend/src/shital/capabilities/notifications/: capabilities.py
backend/src/shital/capabilities/payments/: capabilities.py
backend/src/shital/capabilities/payroll/: capabilities.py
backend/src/shital/core/brain/: orchestrator.py
backend/src/shital/core/dna/: registry.py
backend/src/shital/core/fabrics/: cache.py  config.py  constants.py  database.py  errors.py  logger.py  models.py  secrets.py
backend/src/shital/core/space/: context.py  result.py
backend/src/shital/models/: user.py
backend/tests/: test_smoke.py
deployer/: Dockerfile  deploy.sh  server.py
infra/: backup.sh  docker-compose.yml  install-backup-cron.sh  install-monitor-cron.sh  monitor-mail.py  monitor.sh  test-restore.sh
infra/cron/: Dockerfile  crontab
infra/nginx/: nginx-http-only.conf  nginx.conf
infra/nginx/html/: index.html
infra/postgres/: init.sql
nginx/: nginx.conf
nginx/conf-dev/: default.conf
nginx/conf.d/: dev.conf  shital.conf
nginx/errors/: 502-admin.html
nginx/hub/: index.html
scripts/: test_kiosk_flow.py
(+99 files in other folders)
